[package]
name = "yarrow-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oligamiq/yarrow-rs"
keywords = ["random", "yarrow", "ranlux"]
description = "A Rust implementation of the Yarrow PRNG"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "*"
sysinfo = "0.30"
